--- a/BMFNMVVMTest/BMFNMVVMTest.csproj
+++ b/BMFNMVVMTest/BMFNMVVMTest.csproj
@@ -71,6 +71,13 @@
     <Compile Include="Model\DataItem.cs" />
     <Compile Include="Model\DataService.cs" />
     <Compile Include="Model\IDataService.cs" />
+    <Compile Include="Model\Report1.cs" />
+    <Compile Include="Model\Report2.cs" />
+    <Compile Include="Model\ReportsContext.cs" />
+    <Compile Include="Model\SubReport.cs" />
+    <Compile Include="Parser\ReportDataTemplateSelector.cs" />
+    <Compile Include="Parser\ReportField.cs" />
+    <Compile Include="Parser\ReportsParser.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
