--- a/BMFNMVVMTest/BMFNMVVMTest.csproj
+++ b/BMFNMVVMTest/BMFNMVVMTest.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Model\Report2.cs" />
     <Compile Include="Model\ReportsContext.cs" />
     <Compile Include="Model\SubReport.cs" />
+    <Compile Include="Model\SubReport2.cs" />
     <Compile Include="Parser\ReportDataTemplateSelector.cs" />
     <Compile Include="Parser\ReportField.cs" />
     <Compile Include="Parser\ReportsParser.cs" />
